# Computational-Intelligence

./: README.md  pyproject.toml
halloween/: README.md  halloween.ipynb
lab10/: README.md  lab10.ipynb  monte_carlo_rl_agent.pkl  q_learning_rl_agent.pkl
lab2/: README.md  best_comma.pkl  best_comma_mu_lambda.pkl  best_plus.pkl  best_plus_mu_lambda.pkl  lab2-nim.ipynb
lab9/: README.md  lab9.ipynb
set-covering/: README.md  set-covering.ipynb
